--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.xiu.xtmusic"
         minSdkVersion 19
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.1"
+        versionCode 180128
+        versionName "1.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -29,15 +29,15 @@ dependencies {
     //ORMLite
     compile 'com.j256.ormlite:ormlite-core:5.0'
     compile 'com.j256.ormlite:ormlite-android:5.0'
-    //图片高斯模糊
-    compile 'net.qiujuer.genius:blur:2.0.0-beta4'
-    //圆形ImageView
-    compile 'de.hdodenhof:circleimageview:2.2.0'
     //GSON
     compile 'com.google.code.gson:gson:2.8.2'
     //OKHTTP
     implementation files('libs/okhttp-3.9.1.jar')
     implementation files('libs/okio-1.13.0.jar')
+    //图片高斯模糊
+    compile 'net.qiujuer.genius:blur:2.0.0-beta4'
+    //圆形ImageView
+    compile 'de.hdodenhof:circleimageview:2.2.0'
     //圆形进度条
     compile 'com.czp.arcProgressBar:ArcProgressBar:1.0.1'
     //音乐缓存
@@ -46,4 +46,6 @@ dependencies {
     compile 'com.chibde:audiovisualizer:2.0.0'
     //个性化Toast提示
     compile 'com.sdsmdg.tastytoast:tastytoast:0.1.1'
+    //图片开源框架
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
